# EchoClass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/agents/: __init__.py  director.py  evaluator.py  feedback.py  student.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_kb_schema.py
backend/api/: auth.py  auth_utils.py  deps.py  lessons.py  personas.py  qa_sessions.py  qa_ws.py  response.py  stages.py
backend/db/: crud.py  engine.py  models.py
backend/graph/: __init__.py  checkpoint.py  classroom.py  state.py
backend/kb/: README.md  __init__.py  database.py  evolution.py  models.py  poc_loader.py  retrieval.py
backend/legacy/: DEPRECATED.md  __init__.py
backend/legacy/agents/: __init__.py  director.py
backend/legacy/graph/: __init__.py  checkpoint.py  classroom.py  state.py
backend/legacy/prompts/: director.j2
backend/legacy/schemas/: __init__.py  events.py  student_reply.py
backend/legacy/scripts/: __init__.py  try_classroom.py  try_director.py
backend/legacy/tests/: test_classroom_graph.py  test_director_agent.py
backend/llm/: __init__.py  client.py
backend/prompts/: evaluator.j2  extractor.j2  feedback.j2  student.j2  student_ask.j2  student_chat.j2  student_check.j2  student_followup.j2
backend/rag/: extractor.py  indexer.py  misconceptions.py  parser.py  qa_examples.py
backend/schemas/: __init__.py  api.py  dialog.py  director.py  evaluation.py  events.py  feedback.py  followup.py  lesson.py  misconception.py  qa_session_api.py  question.py  stage.py  student.py  ws_events.py
backend/scripts/: build_theory_index.py  check_misconception_recall.py  mock_ws_server.py  poc_compare.py  replay_eval.py  seed_demo.py  seed_edu_kb.py  try_director.py  try_lesson_rag.py  try_qa_session.py  try_stage_profile.py  try_student_agent.py  validate_misconceptions.py  validate_personas.py  validate_rubric.py
backend/services/: __init__.py  evaluation_service.py  qa_session.py  qa_session_registry.py  session_serde.py
backend/tests/: conftest.py  test_api_qa_sessions.py  test_classroom_graph.py  test_decide_followup.py  test_delete_session.py  test_dialog_schema.py  test_director_agent.py  test_evaluation_api.py  test_evaluation_schema.py  test_evaluation_service.py  test_evaluator.py  test_evaluator_live.py  test_feedback.py  test_feedback_live.py  test_health.py  test_kb_evolution.py  test_kb_models.py  test_kb_retrieval.py  test_kb_seed.py  test_lesson_dedup.py  test_listing_api.py  test_llm_client.py  test_logging.py  test_misconceptions.py  test_mock_ws_server_e2e.py  test_persistence.py  test_persona_loader.py  test_qa_examples.py  test_qa_session.py  test_qa_session_registry.py  test_qa_session_streaming.py  test_qa_ws.py  test_rag.py  test_replay_eval.py  test_seed_demo.py  test_stage_profile.py  test_student_agent.py  test_student_dialog.py  test_student_questions.py  test_student_stream.py  (+1 more)
backend/utils/: __init__.py  logging.py
docs/: PIVOT.md  api_contract.md  edu_kb_design.md  edu_kb_poc_results.md  edu_kb_post_merge_eval.md  edu_kb_theory_map.md  eval_rubric_draft.md  handoff_b_m2.md  m2_content_log.md  persona_design.md  proposal.md  roles.md  rubric_v0.md  setup_macos_linux.md  setup_windows.md  user_test_plan.md  user_test_report.md  w1_smoke_test.md
frontend/: README.md
(+162 files in other folders)
