[project]
name = "echoclass-backend"
version = "0.1.0"
description = "EchoClass backend — FastAPI + LangGraph multi-agent virtual classroom."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EchoClass Team" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api",
    "db",
    "graph",
    "llm",
    "prompts",
    "rag",
    "schemas",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
