[project]
name = "echoclass-backend"
version = "0.1.0"
description = "EchoClass backend — FastAPI · 师范生 1v1 答疑陪练系统。"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EchoClass Team" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # NOTE: langgraph / langchain-openai 暂保留以匹配 uv.lock；
    # 当前代码 0 引用，待网络条件允许时统一跑 `uv lock` 清理。
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "jinja2>=3.1.0",
    "pymupdf4llm>=0.0.17",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api",
    "db",
    "llm",
    "prompts",
    "rag",
    "schemas",
    "services",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
